--- a/public/css/estilo.css
+++ b/public/css/estilo.css
@@ -35,6 +35,24 @@ body {
     padding: 14px 0;
 }
 
+.container .form .form-header2 .form-tittle2 {
+    font-size: 24px;
+    font-weight: normal;
+    font-family: 'Bree Serif', serif;
+    color: #636363;
+    text-align: left;
+    padding: 14px 0;
+}
+
+.container .form .form-tittle_{
+    font-size: 20px;
+    font-weight: normal;
+    font-family: 'Bree Serif', serif;
+    color: #474747;
+    text-align: center;
+    padding: 14px 0;
+}
+
 .center{
 	display:block;
 	margin:auto;
@@ -64,8 +82,8 @@ body {
 }
 
 .container .form {
-	width: 75%;
-	max-width: 800px;
+	width: 85%;
+	max-width: 860px;
 	margin: auto;
 	padding: 5px 35px;
 	padding-bottom: 30px;
@@ -83,7 +101,8 @@ body {
     color: #636363;
     font-size: 14px;
 	font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
-    position: relative;
+	position: relative;
+	text-align: justify;
 }
 
 .container .form .form-control {
